fixing blog background stretch on smaller screens

--- a/assets/scss/mpowheard.scss
+++ b/assets/scss/mpowheard.scss
@@ -51,7 +51,7 @@ body {
 		width: 500%;
     	margin-left: -200%;
 	}
-	.white {
+	.white, .white-bg {
 		background-color:$white;
 	}
 	article.white {
